--- a/PasswordGenrator/style.css
+++ b/PasswordGenrator/style.css
@@ -44,7 +44,7 @@ font-weight: bold;
     display: flex;
     justify-content: space-between;
 }
-.display{
+.password{
     border: none;
     padding: 5px;
     margin-right: 10px;
@@ -90,5 +90,4 @@ font-weight: bold;
         color: whitesmoke;
         background-color: grey;
         box-shadow: 0px 0px 5px 3px rgb(196, 196, 196);
-
 }
