--- a/PasswordGenrator/style.css
+++ b/PasswordGenrator/style.css
@@ -49,7 +49,7 @@ font-weight: bold;
     padding: 5px;
     margin-right: 10px;
     border-radius: 5px;
-    outline: none;
+
 }
 .copybtn{
     font-size: 20px;
@@ -90,4 +90,18 @@ font-weight: bold;
         color: whitesmoke;
         background-color: grey;
         box-shadow: 0px 0px 5px 3px rgb(196, 196, 196);
+}
+.inputfield{
+    position: relative;
+}
+span{
+    position: absolute;
+    font-size: 11px;
+    bottom: 30px;
+    right: 2px;
+    color: rgb(250, 209, 216) ;
+    opacity: 0;
+}
+.active{
+    opacity: 1;
 }
