--- a/weatherApp/style.css
+++ b/weatherApp/style.css
@@ -4,15 +4,16 @@
     margin: 0;
     box-sizing: border-box;
 }
-html , body{
+html,body{
     width: 100%;
     height: 100%;
     font-family: poppins;
+    background: linear-gradient(112.1deg, rgb(32, 38, 57) 11.4%, rgb(63, 76, 119) 70.2%);
 }
 .wrapper{
     width: 100vw;
     height: 100vh;
-    background: linear-gradient(112.1deg, rgb(32, 38, 57) 11.4%, rgb(63, 76, 119) 70.2%);
+    
      display: flex;
     justify-content: center;
     align-items: center; 
@@ -24,20 +25,16 @@ html , body{
     width: 50px;
 }
 .container{
-    /* background: rgb(165, 180, 245); */
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(20px);
-    -webkit-backdrop-filter: blur(20px);
-    min-width: 30vw;
     display: flex;
     flex-direction: column;
     align-items: center;
+    
    
 }
 .headline{
     font-size: 2rem;
     color: whitesmoke;
+    margin-top: 20px;
 }
 .weatherbtn{
    display: flex;
@@ -72,7 +69,8 @@ html , body{
 
 }
 .weatherResult{
-    color: rgb(39, 0, 39);
+    color: whitesmoke;
+   
 }
 .weatherResult p {
     font-size: 20px;
@@ -80,30 +78,56 @@ html , body{
     display: flex;
     justify-content: center;
     
+    
 }
 .Temp{
     font-size: 40px;
     font-weight: bold;
+    
 }
 .tempStatus{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-   
+    
 
 }
 .tempStatus div {
     margin: 10px;
-    padding: 10px;
-   
-background: rgba(255, 255, 255, 0.2);
-border-radius: 16px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(5px);
--webkit-backdrop-filter: blur(5px);
-border: 1px solid rgba(255, 255, 255, 0.3);
+    padding: 10px 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 10px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+}
+@media only screen and (max-width: 425px) {
+    .tempStatus div {
+        padding: 10px;
+    }
+    .weatherConditionImage{
+        width: 25px;
+    }
+    .Temp{
+        font-size: 20px;
+        font-weight: bold;
+    }
 }
 .weatherCondition{
     margin-left: 30px;
+    
 }
+.notfounddiv{
+   
+    display: none;
+}
+.notfound{
+    width: 20vw;
+    
+}
+
 
